--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-asset": "^2.0.1",
